--- a/src/Game/appsettings.Development.json
+++ b/src/Game/appsettings.Development.json
@@ -1,8 +1,14 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  }
+
+  "Monster": {
+    "Health": 100,
+    "MinAttack": 0,
+    "MaxAttack": 10
+  },
+  "Hero": {
+    "Health": 100,
+    "MinAttack": 0,
+    "MaxAttack": 10
+  },
+  "AttackDelay": "00:00:00.500"
 }
