--- a/src/Game/appsettings.json
+++ b/src/Game/appsettings.json
@@ -1,8 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
+  "Serilog": {
+    "WriteTo": [
+      { "Name": "Console" }
+    ],
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Override": {
+        "Microsoft.Hosting.Lifetime": "Warning"
+      }
     }
   }
 }
